<resources>
    <string name="app_name">My News App</string>
    <string name="no_articles_found">No articles found.\nPlease try again later.</string>
    <string name="no_internet_connection">Problem with internet connection.\nPlease try again later.</string>
    <string name="title">Chris Grayling tells MPs he is \'sorry\' for failure of new rail timetable and announces inquiry – Politics live</string>
    <string name="date">2018-06-04</string>
    <string name="section">Politics</string>
    <string name="author">Andrew Jack Sparrow</string>
    <string name="trail">In today’s Fiver: Joey Barton’s back baby, Marco Silva’s back baby and Neville Southall’s zingers</string>

    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Settings</string>

    <string name="settings_min_articles_number">Minimum number of articles</string>
    <string name="settings_min_articles_key" translatable="false">min_articles</string>
    <string name="settings_min_articles_default" translatable="false">10</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_newest_value</string>

    <!-- Label for order-by newest [CHAR LIMIT=20] -->
    <string name="settings_order_by_newest_label">Newest</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>

    <!-- Label for order-by oldest [CHAR LIMIT=20] -->
    <string name="settings_order_by_oldest_label">Relevance</string>
    <string name="settings_order_by_oldest_value" translatable="false">relevance</string>

    <string name="URL_fields_keywords">headline,trailText,firstPublicationDate,shortUrl,thumbnail,byline</string>

</resources>