<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="4dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:maxLines="3"
                android:text="@string/title"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:ellipsize="end" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/published_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="12sp" />

                <View
                    style="@style/separatorStyle"
                    android:id="@+id/section_separator_view"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/section_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:text="@string/section"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="12sp" />

                <View
                    style="@style/separatorStyle"
                    android:id="@+id/author_separator_view"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/author_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:text="@string/author"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="12sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/trail_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/trail"
                android:textSize="14sp" />

        </LinearLayout>

        <ImageView
            android:padding="2dp"
            android:layout_weight="0"
            android:id="@+id/thumbnail_image_view"
            android:layout_width="108dp"
            android:layout_height="108dp"
            android:layout_marginLeft="6dp"
            android:scaleType="centerCrop"
            android:src="@drawable/thumbnail" />

</LinearLayout>